--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "install": "^0.13.0",
+    "material-design-icons-iconfont": "^6.5.0",
+    "npm": "^8.5.5",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.2",
