--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.2.0",
     "vue-toastification": "^1.7.11",
     "vuetify": "^2.4.0",
